# buttons-and-lights

./: .gitignore  README.md  behaviours.py  buttons-and-lights.py  config.py  hid.py  hid_usages.py  init-usb-gadgets.sh  keymap.py  keys.py  leds.py  njak.py  pyproject.toml
descriptors/: bootkbd.c  ext_hid.hex
hardware/: keys.py  leds.py
hass/: discoverable.py  mqtt_light.py
hid/: __init__.py  bitmap_part.py  bitmap_report.py  gadget.py  usages.py
mqtt/: mqtt_config.py
services/: buttons-and-lights.service  njak-usb-gadget.service  usb-gadget.service
src/njak/: colours.py  njak-mqtt.json.example  njak.py
src/njak/hardware/: keys.py  leds.py
src/njak/hass/: discoverable.py  mqtt_light.py  mqtt_trigger.py
src/njak/mqtt/: mqtt_config.py
src/njak/services/: njak.service
src/njak/util/: dataclass_json_encoder.py
tests/: test_njak.py
util/: dataclass_json_encoder.py
