[tool.poetry]
name = "njak"
version = "0.1.0"
description = ""
authors = ["Eltariel <ellie@eltariel.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spidev = "^3.5"
gpiozero = "^1.5.1"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

